--- a/src/styles/hotel.css
+++ b/src/styles/hotel.css
@@ -5,29 +5,75 @@
     flex-direction: column;
 }
 
-.hotel-entity {
+.hotel-card {
     display: flex;
     align-items: center;
-    width: 600px;
+    flex-direction: column;
+    width: 700px;
     padding: .5rem;
     margin: .5rem;
     border: 1px solid #000;
+    border-radius: 5px;
+    background: #202020;
+    box-shadow: 0px 0px 15px #000;
+}
+
+.hotel-card-top {
+    display: flex;
+    align-items: center;
+    height: 175px;
+    width: 100%;
 }
 
 .hotel-image {
-    height: 125px;
-    width: 125px;
+    height: 175px;
+    width: 195px;
+    margin-right: .5rem;
     border: 1px solid #000;
 }
 
 .each-slide {
-    height: 125px;
-    width: 125px;
-    border: 1px solid blue;
+    height: 175px;
+    width: 195px;
 }
 
 .hotel-building-img {
+    border-radius: 5px;
     height: 100%;
     width: 100%;
-    border: 1px solid red;
+    object-fit: fill;
+}
+
+.hotel-info {
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+    width: 100%;
+    padding: 1rem;
+    border-radius: 5px;
+    background: #343a40;
+}
+
+.hotel-name-address {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+
+.hotel-name {
+    font-size: 16px;
+    font-size: 500;
+    color: #f8f9fa;
+}
+
+.hotel-address {
+    font-size: 14px;
+    font-size: 500;
+    color: #f8f9fa;
+}
+
+.hotel-star-icon {
+    font-size: 16px;
+    color: #ffd60a;
 }
