--- a/src/styles/hotel.css
+++ b/src/styles/hotel.css
@@ -10,6 +10,7 @@
     align-items: center;
     flex-direction: column;
     width: 700px;
+    height: 600px;
     padding: .5rem;
     margin: .5rem;
     border: 1px solid #000;
@@ -23,6 +24,7 @@
     align-items: center;
     height: 175px;
     width: 100%;
+    margin-bottom: .5rem;
 }
 
 .hotel-image {
@@ -76,4 +78,9 @@
 .hotel-star-icon {
     font-size: 16px;
     color: #ffd60a;
+}
+
+.hotel-rooms-list {
+    width: 100%;
+    height: 395px;
 }
