added new features

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #ced4da;
+  background: #003554;
 }
 
 code {
