--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -1,10 +1,22 @@
 .banner-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     margin-bottom: 1rem;
 }
 
 .banner {
-    width: 100%;
-    height: 300px;
     border: 1px solid #000;
+}
+
+.banner-image {
+    width: 800px;
+    height: 300px;
+}
+
+.selected-room-image {
+    object-fit: fill;
+    height: 100%;
+    width: 100%;
 }
