--- a/src/styles/rooms.css
+++ b/src/styles/rooms.css
@@ -6,30 +6,36 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 10px;
-    padding: .5rem;
+    padding: 0 0 .5rem 0;
     width: 100%;
     height: 100%;
     overflow-y: auto;
 }
 
-.hotel-room {
+.hotel-room-btn {
     display: flex;
     align-items: center;
     width: 100%;
     padding: .5rem;
+    cursor: pointer;
     border-radius: 5px;
-    background: #023e8a;
-    border: 1px solid #0077b6;
+    background: #343a40;
+    border: 1px solid #6c757d;
+}
+
+.hotel-room-btn:hover {
+    background: #212529;
 }
 
 .room-brief-info {
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
     flex-direction: column;
+    text-align: left;
     margin-right: .5rem;
     min-width: 135px;
+    max-width: 135px;
     height: 100%;
+    padding: .5rem;
 }
 
 .room-name {
@@ -37,16 +43,21 @@
 }
 
 .room-name-title {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 700;
     color: #f8f9fa;
 }
 
-.room-description {}
+.room-description {
+    display: flex;
+    height: 100%;
+    padding: .5rem;
+}
 
 .room-desc-text {
     font-size: 14px;
     font-weight: 500;
+    text-align: justify;
     color: #f8f9fa;
 }
 
