--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -7,6 +7,8 @@
 }
 
 .banner {
+    width: 800px;
+    height: 300px;
     border: 1px solid #000;
 }
 
@@ -16,7 +18,6 @@
 }
 
 .selected-room-image {
-    object-fit: fill;
     height: 100%;
     width: 100%;
 }
