fixed bugs with the slider

--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -12,12 +12,14 @@
     border: 1px solid #000;
 }
 
-.banner-image {
+.selected-slide {
     width: 800px;
     height: 300px;
 }
 
 .selected-room-image {
+    border-radius: 5px;
     height: 100%;
     width: 100%;
+    object-fit: fill;
 }
