--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -3,18 +3,21 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin-bottom: 1rem;
 }
 
 .banner {
+    text-align: center;
     width: 800px;
-    height: 300px;
-    border: 1px solid #000;
+    height: 450px;
+    background: #202020;
+    border-radius: 5px;
+    border: 1px solid #101010;
+    box-shadow: 0px 0px 15px #000;
 }
 
 .selected-slide {
     width: 800px;
-    height: 300px;
+    height: 450px;
 }
 
 .selected-room-image {
