--- a/src/styles/hotel.css
+++ b/src/styles/hotel.css
@@ -5,10 +5,10 @@
     width: 600px;
     height: 600px;
     padding: .5rem;
-    margin: .5rem;
-    border: 1px solid #000;
+    margin-bottom: 1.5rem;
+    border: 1px solid #343a40;
     border-radius: 5px;
-    background: #202020;
+    background: #151515;
     box-shadow: 0px 0px 15px #000;
 }
 
@@ -46,7 +46,7 @@
     width: 100%;
     padding: 1rem;
     border-radius: 5px;
-    background: #343a40;
+    background: #2f3e46;
     border: 1px solid #6c757d;
 }
 
@@ -60,13 +60,13 @@
 .hotel-name {
     font-size: 16px;
     font-size: 500;
-    color: #f8f9fa;
+    color: #ffffff;
 }
 
 .hotel-address {
     font-size: 14px;
     font-size: 500;
-    color: #f8f9fa;
+    color: #ffffff;
 }
 
 .hotel-star-icon {
