--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -7,7 +7,7 @@
     width: 100%;
     padding: 0 1.5rem;
     z-index: 1000;
-    background: #202020;
+    background: #1d3557;
     border-bottom: 1px solid #101010;
     box-shadow: 0 2px 35px 0 rgb(0, 0, 0, .5);
 }
