--- a/src/styles/filter.css
+++ b/src/styles/filter.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 800px;
+    max-width: 800px;
     padding: .5rem 1rem .5rem 1rem;
     border-radius: 5px;
     background: #202020;
@@ -111,4 +111,17 @@
     font-size: 14px;
     font-weight: 700;
     color: #00b4d8;
+}
+
+@media(max-width: 768px) {
+    .filter-box {
+        flex-direction: column;
+        width: 450px;
+        transition: 200ms ease-in-out;
+        padding: .5rem .5rem .5rem .5rem;
+    }
+
+    .guests-control {
+        width: 100%;
+    }
 }
