--- a/src/styles/hotel.css
+++ b/src/styles/hotel.css
@@ -10,6 +10,7 @@
     border-radius: 5px;
     background: #151515;
     box-shadow: 0px 0px 15px #000;
+    transition: 200ms ease-in-out;
 }
 
 .hotel-card-top {
@@ -85,4 +86,11 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+
+@media(max-width: 768px) {
+    .hotel-card {
+        width: 450px;
+        transition: 200ms ease-in-out;
+    }
 }
