--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -7,7 +7,7 @@
     width: 100%;
     padding: 0 1.5rem;
     z-index: 1000;
-    background: #1d3557;
+    background: #0d3b66;
     border-bottom: 1px solid #101010;
     box-shadow: 0 2px 35px 0 rgb(0, 0, 0, .5);
 }
@@ -17,7 +17,7 @@
 }
 
 .nav-brand-name-title {
-    font-size: 20px;
+    font-size: 26px;
     font-weight: 700;
     color: #f8f9fa;
 }
