--- a/src/styles/rooms.css
+++ b/src/styles/rooms.css
@@ -24,7 +24,7 @@
 }
 
 .hotel-room-btn:hover {
-    background: #003566;
+    background: #0077b6;
 }
 
 .room-brief-info {
@@ -82,7 +82,10 @@
 }
 
 .rooms-error-msg {
-    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
     font-weight: 500;
     color: #e63946;
 }
